[package]
name = "rust_key_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = "1.6.0"
copypasta = "0.8.2"
rand = "0.8.5"
rand_pwd = "1.1.3"
rsa = { version = "0.8.2", features = ["std", "pem", "pkcs5"] }
scanpw = "0.1.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
