[package]
name = "rust_key_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "keybox"
path = "src/main.rs"

[dependencies]
base64ct = "1.6.0"
chrono = "0.4.24"
copypasta = "0.8.2"
home = "0.5.4"
rand = "0.8.5"
rand_pwd = "1.1.3"
rsa = { version = "0.8.2", features = ["std", "pem", "pkcs5"] }
scanpw = "0.1.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
